--- a/index.html
+++ b/index.html
@@ -7,9 +7,32 @@
         <title>Tic Tac Toe</title>
         <link rel="shortcut icon" href="./img/logo.png">
         <link rel="stylesheet" href="./style.css">
+     
     </head>
 
     <body>
-        <p>© All Rights Reserved - Gevorg Alaverdyan.</p>
+
+        <div class="container">
+            <h1>XO- Gev's TIC TAC TOE -OX</h1>
+            <h1 id="playerText"></h1>
+            
+            <div id="gameboard">
+                <div class="box" id="0"></div>
+                <div class="box" id="1"></div>
+                <div class="box" id="2"></div>
+                <div class="box" id="3"></div>
+                <div class="box" id="4"></div>
+                <div class="box" id="5"></div>
+                <div class="box" id="6"></div>
+                <div class="box" id="7"></div>
+                <div class="box" id="8"></div>
+            </div>
+
+            <button id="restartBtn">Restart</button>
+
+        </div>
+        <!-- <p>© All Rights Reserved - Gevorg Alaverdyan.</p> -->
+
+        <script src="./main.js"></script>
     </body>
 </html>
